--- a/src/Manassa/Windows/SelectBaselinesAndOptions.xaml
+++ b/src/Manassa/Windows/SelectBaselinesAndOptions.xaml
@@ -3,14 +3,23 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:converters="clr-namespace:Manassa.Converters"
              mc:Ignorable="d" 
+             Name="thisControl"
              d:DesignHeight="600" d:DesignWidth="600">
+    <UserControl.Resources>
+        <converters:BoolInverter            x:Key="BoolInverter"/>
+        <converters:DatasetPathConverter    x:Key="DatasetNameConverter"/>
+        <converters:DatasetColorConverter   x:Key="datasetConverter"   IsDataset="True"/>
+        <converters:DatasetColorConverter   x:Key="databaseConverter"  IsDataset="False"/>
+    </UserControl.Resources>
     <Grid
         Background="White"
         Margin="5"
         >
         <Grid.RowDefinitions>
-            <RowDefinition/>
+            <RowDefinition Height="40*"/>
+            <RowDefinition Height="60*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
@@ -23,99 +32,167 @@
             <Grid Margin="5">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <Canvas
+                    Grid.Row="1"
+                    Grid.Column="0"
+                    Width="16"
+                    Height="16"
+                    >
+                    <Rectangle
+                        Width="16"
+                        Height="16"
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center">
+                        <Rectangle.Fill>
+                            <SolidColorBrush
+                                Color="{Binding Path=Analysis.Options.AlignmentOptions.IsAlignmentBaselineAMasstagDB, 
+                                UpdateSourceTrigger=PropertyChanged,
+                                Converter={StaticResource ResourceKey=datasetConverter}}"
+                                >
+                            </SolidColorBrush>
+                        </Rectangle.Fill>
+                    </Rectangle>
+                </Canvas>
+                <Button
+                    Style="{DynamicResource ResourceKey=SimpleButtonStyle}"     
+                    Grid.Row="1"
+                    Grid.Column="1"
+                    Width="156"
+                    Height="64"
+                    Margin="10"
+                    x:Name="DatasetToDatasetAlignmentButton"
+                    Content="Align Dataset(s) to Dataset" Click="Button_Click" >                    
+                </Button>
+                <ComboBox                    
+                    IsEnabled="{Binding Path=Analysis.Options.AlignmentOptions.IsAlignmentBaselineAMasstagDB, 
+                            Converter={StaticResource ResourceKey=BoolInverter}}"
+                    Grid.Column="2"
+                    Grid.Row="1"
+                    Margin="5"
+                    Height="32"
+                    DisplayMemberPath="DatasetName"
+                    ItemsSource="{Binding Path=Datasets}"
+                    SelectedItem="{Binding Path=Analysis.MetaData.BaselineDataset, Mode=TwoWay}">
+                </ComboBox>
+                <Canvas
+                    Width="16"
+                    Height="16"
+                    Grid.Row="2"
+                    Grid.Column="0">
+                    <Rectangle
+                        Width="16"
+                        Height="16"
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center">
+                        <Rectangle.Fill>
+                            <SolidColorBrush
+                                Color="{Binding Path=Analysis.Options.AlignmentOptions.IsAlignmentBaselineAMasstagDB, 
+                                
+                                UpdateSourceTrigger=PropertyChanged,
+                                    Converter={StaticResource ResourceKey=databaseConverter}}"
+                                >                                
+                            </SolidColorBrush>
+                        </Rectangle.Fill>
+                    </Rectangle>
+                </Canvas>
+                <Button
+                    Style="{DynamicResource ResourceKey=SimpleButtonStyle}"    
+                    Width="156"
+                    Height="64"
+                    Margin="10"
+                    Grid.Row="2"
+                    Grid.Column="1"
+                    VerticalAlignment="Center"
+                    x:Name="DatasetToDatabaseAlignmentButton"
+                    Content="Align Dataset(s) to Database" Click="Button_Click_1" />
+                <Label          
+                    IsEnabled="{Binding Path=Analysis.Options.AlignmentOptions.IsAlignmentBaselineAMasstagDB, 
+                                UpdateSourceTrigger=PropertyChanged}"                    
+                    VerticalContentAlignment="Center"
+                    Grid.Row="2"
+                    Grid.Column="2">
+                    You must select a database below.
+                </Label>
+            </Grid>
+            
+        </GroupBox>
+        <GroupBox
+            Grid.Row="1"
+            Header="Mass Tag Database for Alignment or Identification"  
+            Margin="5"
+            >
+            <Grid                     
+                    Grid.Row="1"
+                    Grid.Column="1"
+                    Margin="5">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
                     <RowDefinition />
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition />
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
-                <Button
-                    Style="{DynamicResource ResourceKey=SimpleButtonStyle}"                      
-                    Grid.Row="0"
-                    Grid.Column="0"
-                    Width="128"
-                    Height="64"
-                    Margin="5"
-                    Content="Dataset(s) to Dataset"/>
-                <ComboBox
-                    Grid.Column="1"
-                    Margin="5"
-                    Height="32"
-                    >
-                    
-                </ComboBox>
-                <Button
-                    Style="{DynamicResource ResourceKey=SimpleButtonStyle}"    
-                    Width="128"
-                    Height="64"
-                    Margin="5"
-                    Grid.Row="1"
-                    Grid.Column="0"
-                    Content="Dataset(s) to Database"/>
-                <Grid 
-                    Grid.Row="1"
-                    Grid.Column="1"
-                    Margin="5">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition />
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto" />
-                        <ColumnDefinition />
-                        <ColumnDefinition />
-                        <ColumnDefinition />
-                    </Grid.ColumnDefinitions>
-                    <Label 
+                <Label 
+                        Grid.Row="0"
+                        Grid.ColumnSpan="4"
                         HorizontalContentAlignment="Left"
-                        >Local Database</Label>
-                    <TextBox Grid.Column="1" 
-                             Grid.Row="0" 
-                             x:Name="DatabasePath" 
-                             Margin="10,5,10,5"/>
-                    <Button Grid.Column="2" Grid.Row="0"                           
-                            HorizontalAlignment="Right" 
-                        Style="{DynamicResource ResourceKey=SimpleBrowseButtonStyle}"
-                        Width="100" Margin="5" x:Name="BrowseForFolderButton" Click="BrowseForFolderButton_Click">Browse</Button>
-                    <ToggleButton 
-                        Grid.Column="3"
-                        Grid.Row="0"      
+                        Margin="0,10,10,20"
+                        >Select a database for alignment, peak matching (identification), or both</Label>
+
+                <ToggleButton 
+                        Grid.Column="0"
+                        Grid.Row="1"      
                         HorizontalAlignment="Right"    
                         Style="{DynamicResource ResourceKey=SimpleToggleButtonStyle}"    
-                        Width="100"  Margin="5">Use</ToggleButton>
-                    <Label 
-                        HorizontalContentAlignment="Left"
-                        Grid.Row="1"
-                        >MTS Database</Label>
-                    <Label Grid.Column="1" 
+                        Width="128"
+                        Margin="5" Checked="ToggleButton_Checked">Use Local Database</ToggleButton>
+                <TextBox Grid.Column="1" 
                              Grid.Row="1" 
-                           Content="No database selected."
-                             Margin="5"/>
-                    <Button Grid.Column="2"
-                            Grid.Row="1"              
-                            x:Name="SelectMtsMtdbButton"
-                            HorizontalAlignment="Right" 
-                            Style="{DynamicResource ResourceKey=SimpleBrowseButtonStyle}"
-                            Width="100" 
-                            Margin="5" Click="SelectMtsMtdbButton_Click">Select MTDB</Button>                    
-                    <ToggleButton Grid.Column="3" 
+                             Text="{Binding Path=Analysis.Options.MassTagDatabaseOptions.DatabaseFilePath, Mode=TwoWay}"
+                             Margin="10,5,10,5"/>
+                
+                <Button Grid.Column="2" Grid.Row="1" Style="{DynamicResource ResourceKey=SimpleBrowseButtonStyle}"
+                        Width="100" Margin="5,5,5,0" x:Name="BrowseForFolderButton" Click="BrowseForFolderButton_Click">Browse</Button>
+                
+
+
+                <ToggleButton 
+                    Visibility="Hidden"
+                    Grid.Column="0" 
                                   Grid.Row="2"      
                                   Style="{DynamicResource ResourceKey=SimpleToggleButtonStyle}"
                                   HorizontalAlignment="Right"  
                                   VerticalAlignment="Top"
-                                  Width="100" 
+                                  Width="128" 
                                   Height="32"  
-                                  Margin="5">Use</ToggleButton>
-                </Grid>
+                                  Margin="5">Use MTS Database</ToggleButton>
+                <Label                        
+                    Visibility="Hidden"
+                            Grid.Column="1" 
+                            Grid.Row="2" 
+                            Content="{Binding Path=Analysis.Options.MassTagDatabaseOptions.DatabaseName}"
+                            Margin="5"/>
+                <Button     Grid.Column="2"
+                            Grid.Row="2" 
+                             Visibility="Hidden"            
+                            x:Name="SelectMtsMtdbButton"
+                            HorizontalAlignment="Right" 
+                            Style="{DynamicResource ResourceKey=SimpleBrowseButtonStyle}"
+                            Width="100" 
+                            Margin="5" >Select MTDB</Button>
             </Grid>
-            
-        </GroupBox>      
-        <GroupBox
-            Grid.Row="1"
-            Grid.Column="0"
-            ></GroupBox>
-        
-          
-        
+        </GroupBox>
     </Grid>
 </UserControl>
