--- a/src/Manassa/Windows/MainWindow.xaml
+++ b/src/Manassa/Windows/MainWindow.xaml
@@ -1,15 +1,17 @@
 ﻿<Window x:Class="Manassa.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
-        xmlns:ribbon="clr-namespace:Microsoft.Windows.Controls.Ribbon;assembly=RibbonControlsLibrary"
         xmlns:manassa="clr-namespace:Manassa.Windows"
         xmlns:maConverters="clr-namespace:Manassa.Converters"
         Title="MultiAlign"         
         Height="800" 
         Width="1200"
-        Icon="/Manassa;component/Resources/logo.png" 
+        Icon="/MultiAlign;component/Resources/logo.png" 
         WindowStartupLocation="CenterScreen">
 
+    <Window.CommandBindings>
+        <CommandBinding Command="Open" Executed="CommandBinding_Executed"></CommandBinding>
+    </Window.CommandBindings>
     <Window.Resources>        
         <BitmapImage x:Key="MannassaImage" UriSource="pack://application:,,,/Resources/MainIcon.png" />
         <BitmapImage x:Key="AlignmentIcon" UriSource="pack://application:,,,/Resources/AlignmentIcon.png" />
@@ -28,6 +30,30 @@
         <maConverters:ApplicationStateIsSelectedConverter  x:Key="SetupAnalysisStateSelected"       ApplicationState="SetupAnalysis"/>
         <maConverters:ApplicationStateIsSelectedConverter  x:Key="RunningAnalysisStateSelected"     ApplicationState="RunningAnalysis"/>
         <maConverters:ApplicationStateIsSelectedConverter  x:Key="OpenedStateSelected"              ApplicationState="Opened"/>
+
+        <DataTemplate x:Key="RecentAnalysisItemTemplate">
+            <Border CornerRadius="2" BorderThickness="1" HorizontalAlignment="Stretch" Padding="3" Margin="3" BorderBrush="#FFCCCCCC">
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" Width="Auto">
+                    <Button                         
+                        FontSize="14"
+                        Style="{DynamicResource ResourceKey=HyperLinkButtonStyle}"
+                        Margin="5,5,5,5"
+                        HorizontalContentAlignment="Left"
+                        Command="Open"
+                        CommandParameter="{Binding}"
+                        Width="128">
+                        <Button.Content>
+                            <TextBlock TextTrimming="WordEllipsis"                                       
+                                       ToolTip="{Binding Name}" >
+                                        <TextBlock.Text>
+                                            <Binding Path="Name" />
+                                        </TextBlock.Text>
+                            </TextBlock>
+                        </Button.Content>
+                    </Button>                    
+                </StackPanel>
+            </Border>
+        </DataTemplate>
     </Window.Resources>
     
         <Grid
@@ -44,61 +70,52 @@
         </Grid.RowDefinitions>
 
        
-                <StackPanel 
-                    Grid.Column="0"
-                    Grid.Row="0"
-                    Background="#FF414141"            
-                >
-                    <!--53682B-->
-
-
+        <StackPanel 
+            Grid.Column="0"
+            Grid.Row="0"
+            Background="#FF414141"                        
+            MaxWidth="200"
+        >                   
             <Label
-                        FontSize="24"
-                        Foreground="WhiteSmoke"
-                        Margin="5,5,5,5">
-                        MultiAlign
-                    </Label>
-                    <Label Grid.Row="1"
+                FontSize="24"
+                Foreground="WhiteSmoke"
+                Margin="5,5,5,5">
+                MultiAlign
+            </Label>
+            <Label Grid.Row="1"
+                    Foreground="White"
+                    FontSize="18"
+                Margin="5,5,5,5">
+                Start
+            </Label>
+            <Button 
+                x:Name="NewButton"
+                FontSize="16"
+                Style="{DynamicResource ResourceKey=HyperLinkButtonStyle}"
+                Margin="5,5,5,5"
+                HorizontalContentAlignment="Right"
+                Width="128" Click="NewButton_Click">New Analysis</Button>
+            <Button 
+                x:Name="Open"
+                FontSize="16"
+                HorizontalContentAlignment="Right"
+                Style="{DynamicResource ResourceKey=HyperLinkButtonStyle}"
+                Margin="5,5,5,5"
+                Width="128" Click="Open_Click">Open Analysis</Button>
+            <Label Grid.Row="1"
                             Foreground="White"
                             FontSize="18"
                         Margin="5,5,5,5">
-                        Start
-                    </Label>
-                    <Button 
-                        x:Name="NewButton"
-                        FontSize="16"
-                        Style="{DynamicResource ResourceKey=HyperLinkButtonStyle}"
-                        Margin="5,5,5,5"
-                        HorizontalContentAlignment="Right"
-                        Width="128" Click="NewButton_Click">New Analysis</Button>
-                    <Button 
-                        x:Name="Open"
-                        FontSize="16"
-                        HorizontalContentAlignment="Right"
-                        Style="{DynamicResource ResourceKey=HyperLinkButtonStyle}"
-                        Margin="5,5,5,5"
-                        Width="128" Click="Open_Click">Open Analysis</Button>
-                    <Label Grid.Row="1"
-                                    Foreground="White"
-                                    FontSize="18"
-                                Margin="5,5,5,5">
-                        Recent
-                    </Label>
-                    <ItemsControl x:Name="m_recentStackPanel" Grid.Column="0">
-                        <ItemsControl.ItemsPanel>
-                            <ItemsPanelTemplate>
-                                <StackPanel/>
-                            </ItemsPanelTemplate>
-                        </ItemsControl.ItemsPanel>
-                        <ItemsControl.ItemTemplate>
-                            <DataTemplate>
-                                <Button                                     
-                                    Style="{DynamicResource ResourceKey=HyperLinkButtonStyle}"
-                                    Content="{Binding Name}"/>
-                            </DataTemplate>
-                        </ItemsControl.ItemTemplate>
-                    </ItemsControl>
-
+                Recent
+            </Label>            
+            <ListBox 
+                DockPanel.Dock="Left"
+                ItemsSource="{Binding Path=CurrentWorkspace.RecentAnalysis}"
+                BorderThickness="0"  
+                HorizontalContentAlignment="Stretch"
+                ItemTemplate="{StaticResource RecentAnalysisItemTemplate}"                
+                Background="Transparent">
+            </ListBox>
         </StackPanel>
         <TabControl            
             Grid.Row="0"
@@ -116,8 +133,28 @@
                     x:Name="m_performAnalysisControl"                    
                     Visibility="{Binding Path=AnalysisState, Converter={StaticResource ResourceKey=SetupAnalysisState}}"
                     >
-
                 </manassa:PerformAnalysisControl>
+            </TabItem>
+            <TabItem         
+                Style="{DynamicResource ResourceKey=HidenTabItem}"       
+                Header="Running Analysis"
+                IsSelected="{Binding Path=AnalysisState, Converter={StaticResource ResourceKey=RunningAnalysisStateSelected}}"
+                >
+                <manassa:AnalysisRunningControl     
+                    x:Name="runningAnalysisControl"
+                    CurrentState="{Binding  Path=AnalysisState,
+                                            Mode=TwoWay,                 
+                                            RelativeSource={RelativeSource AncestorType={x:Type Window}},
+                                            UpdateSourceTrigger=PropertyChanged, 
+                                            NotifyOnSourceUpdated=True}"
+                    AnalysisConfiguration="{Binding Path=AnalysisConfiguration, 
+                                            ElementName=m_performAnalysisControl}"
+                    Controller="{Binding Path=Controller, 
+                                            RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
+                    Reporter="{Binding Path=Reporter, 
+                                            RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
+                    Visibility="{Binding Path=AnalysisState, Converter={StaticResource ResourceKey=RunningAnalysisState}}">
+                </manassa:AnalysisRunningControl>
             </TabItem>
             <TabItem
                 Style="{DynamicResource ResourceKey=HidenTabItem}"
